# Public/openapi.yaml
@@ -110,10 +110,11 @@ components:
         RegisterInput:
             type: object
             properties:
-              email:
+              contactInfo:
                   description: An valid email address the account will be asscociated to.
                   type: string
                   example: abc@xxx.com
+                  pattern: (^(\\+[1-9]+(-?[0-9]+))?[- ]?([0-9\\- ]+)[0-9]$|^(?:[a-zA-Z0-9!#$%\\&‘*+/=?\\^_`{|}~-]+(?:\\.[a-zA-Z0-9!#$%\\&'*+/=?\\^_`{|}~-]+)*|\"(?:[\\x01-\\x08\\x0b\\x0c\\x0e-\\x1f\\x21\\x23-\\x5b\\x5d-\\x7f]|\\\\[\\x01-\\x09\\x0b\\x0c\\x0e-\\x7f])*\")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\\x01-\\x08\\x0b\\x0c\\x0e-\\x1f\\x21-\\x5a\\x53-\\x7f]|\\\\[\\x01-\\x09\\x0b\\x0c\\x0e-\\x7f])+)\\])$)
               username:
                   description: Case sensitive, must be >= 4 characters
                   type: string
@@ -128,7 +129,7 @@ components:
                   type: string
                   example: three_strAws!
             required:
-              - email
+              - contactInfo
               - username
               - password1
               - password2
